--- a/config_genimage.json
+++ b/config_genimage.json
@@ -1,5 +1,5 @@
 {
-  "CLIP_path": "xx",
+  "CLIP_path": "openai/clip-vit-large-patch14-336",
   "num_experts": 3,
   "rank_per_expert": 4,
   "moe_lambda_orth": 0.01,
