--- a/config_mirage.json
+++ b/config_mirage.json
@@ -1,5 +1,5 @@
 {
-  "CLIP_path": "xx",
+  "CLIP_path": "openai/clip-vit-large-patch14-336",
   "num_experts": 6,
   "rank_per_expert": 8,
   "moe_lambda_orth": 0.001,
