--- a/config/config_omniaid_dino_lora.json
+++ b/config/config_omniaid_dino_lora.json
@@ -1,5 +1,6 @@
 {
-  "CLIP_path": "openai/clip-vit-large-patch14-336",
+  "CLIP_path": "",
+  "DINOV3_path": "facebook/dinov3-vitl16-pretrain-lvd1689m",
   "num_experts": 6,
   "rank_per_expert": 8,
   "moe_lambda_orth": 0.001,
@@ -7,6 +8,8 @@
   "moe_lambda_gating_cls": 0.1,
   "moe_router_hidden_dim": 256,
   "moe_top_k": 2,
+  "dropout": 0.1,
+  "gradient_checkpointing_enable": false,
   "stage1_base_dir": "xx",
   "experts_map": {
     "0": "checkpoint-0.pth",
